--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Web Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Oregon</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Eating, Sleeping, Coding, Playing with my dogs, Movies, Reading, Going to the Beach</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web Developer at a medium to large company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>East side</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I always liked coding and want to be a part of creating web applications and websites</p>
     </section>
 
     <footer id="footer">
